--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.10.1",
     "@types/pako": "^2.0.3",
     "angular-eslint": "19.0.0",
     "eslint": "^9.15.0",
